{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 35,
  "lineage": "a5ba56b8-639a-64c1-6a85-fa00c148f77a",
  "resources": [
    {
      "module": "module.webserver",
      "mode": "data",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:036888254261:security-group/sg-0ba05d5fa2b49eb3c",
            "description": "launch-wizard-1 created 2021-03-02T15:19:36.038+00:00",
            "filter": null,
            "id": "sg-0ba05d5fa2b49eb3c",
            "name": "launch-wizard-1",
            "tags": {},
            "vpc_id": "vpc-3e0b2e56"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096cb92bb3580c759",
            "arn": "arn:aws:ec2:eu-west-2:036888254261:instance/i-03eda6cac0f969e68",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03eda6cac0f969e68",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "launchWizard",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-093627fcfb2695977",
            "private_dns": "ip-172-31-38-237.eu-west-2.compute.internal",
            "private_ip": "172.31.38.237",
            "public_dns": "ec2-35-178-11-191.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.11.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c1f1fedf83f9892e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_8080",
              "launch-wizard-1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6ce05920",
            "tags": {
              "Name": "terraformdemo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02e2d0914084ace73",
              "sg-0ba05d5fa2b49eb3c"
            ]
          },
          "dependencies": [
            "module.webserver.aws_security_group.allow_8080",
            "module.webserver.data.aws_ami.ubuntu",
            "module.webserver.data.aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:036888254261:security-group/sg-02e2d0914084ace73",
            "description": "Allow 8080 inbound traffic",
            "egress": [],
            "id": "sg-02e2d0914084ace73",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "8080 from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_8080",
            "name_prefix": "",
            "owner_id": "036888254261",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-3e0b2e56"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}